<resources>
    <string name="app_name" translatable="false">covSin</string>
    <string name="login" translatable="false">Login</string>
    <string name="register" translatable="false">Register</string>
    <string name="symptoms" translatable="false">Síntomas</string>
    <string name="map" translatable="false">Mapa</string>
    <string name="menu" translatable="false">Menu</string>
    <string name="menu_sesion" translatable="false">Sesión</string>
    <string name="record" translatable="false">Historial</string>
    <string name="tracing" translatable="false">Seguimiento</string>
    <string name="iniciar" translatable="false">Iniciar Sesion</string>
    <string name="user" translatable="false">Usuario</string>
    <string name="pass" translatable="false">Contraseña</string>
    <string name="name" translatable="false">Nombre completo</string>
    <string name="birth_date" translatable="false">Fecha de nacimiento</string>
    <string name="intro_name" translatable="false">Intrduzca su nombre</string>
    <string name="intro_birth_date" translatable="false">YYYY-MM-DD</string>
    <string name="faq" translatable="false">FAQ</string>
    <string name="hospital" translatable="false">Hospitales</string>
    <string name="rating" translatable="false">Valorar app</string>
    <string name="valorar" translatable="false">Valorar</string>
    <string name="comentar" translatable="false">Comentar</string>
    <string name="faq_pregunta1" translatable="false">¿Puedo contagiar con una mascarilla quirúrgica?</string>
    <string name="faq_pregunta2" translatable="false">¿Qué hago si estuve en contacto con un positivo?</string>
    <string name="faq_pregunta3" translatable="false">¿Pueden los niños o los adolescentes contraer la COVID‑19?</string>
    <string name="faq_pregunta4" translatable="false">¿Esta aplicación me puede diagnosticar al 100% covid?</string>
    <string name="faq_pregunta5" translatable="false">¿Cuál es la mascarilla que mas me puede proteger?</string>
    <string name="faq_pregunta6" translatable="false">¿Cómo saber si soy persona de riesgo?</string>
    <string name="btn_tutorial" translatable="false">Tutorial</string>
    <string name="btn_mostrar" translatable="false">Mostrar</string>
    <string name="itro_user" translatable="false">Nombre de Usuario</string>
    <string name="intro_pass" translatable="false">Contraseña</string>
    <string name="btn_salir" translatable="false">Salir</string>
    <string name="btn_guardar" translatable="false">Guardar</string>

    <string name="habituales" translatable="false">Los síntomas más habituales:</string>
    <string name="fiebre" translatable="false">Fiebre</string>
    <string name="tos" translatable="false">Tos seca</string>
    <string name="cansancio" translatable="false">Cansancio</string>

    <string name="menos_habituales" translatable="false">Otros síntomas menos comunes:</string>
    <string name="molestia" translatable="false">Molestias y dolores</string>
    <string name="dolor_g" translatable="false">Dolor de garganta</string>
    <string name="diarrea" translatable="false">Diarrea</string>
    <string name="conjuntivitis" translatable="false">Conjuntivitis</string>
    <string name="dolor_c" translatable="false">Dolor de cabeza</string>
    <string name="p_sentido" translatable="false">Pérdida del sentido del olfato o del gusto</string>
    <string name="erupciones" translatable="false">Erupciones cutáneas o pérdida del color</string>

    <string name="graves" translatable="false">Los síntomas graves:</string>
    <string name="dificultad_r" translatable="false">Dificultad para respirar</string>
    <string name="dolor_pecho" translatable="false">Dolor o presión en el pecho</string>
    <string name="incapacidad" translatable="false">Incapacidad para hablar o moverse</string>
    <string name="title_activity_hospital_maps">Map</string>


</resources>