<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg02">

    <TextView
        android:id="@+id/seguimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tracing"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/habituales"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605" />

    <TextView
        android:id="@+id/habituales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habituales"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fiebre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87" />

    <Switch
        android:id="@+id/fiebre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:showText="false"
        android:text="@string/fiebre"
        app:layout_constraintBottom_toTopOf="@+id/tos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952" />

    <Switch
        android:id="@+id/tos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tos"
        app:layout_constraintBottom_toTopOf="@+id/cansancio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.968" />

    <Switch
        android:id="@+id/cansancio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cansancio"
        app:layout_constraintBottom_toTopOf="@+id/menosHabituales"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />

    <TextView
        android:id="@+id/menosHabituales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menos_habituales"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/molestia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <Switch
        android:id="@+id/molestia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/molestia"
        app:layout_constraintBottom_toTopOf="@+id/dolorGarganta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <Switch
        android:id="@+id/dolorGarganta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/dolor_g"
        app:layout_constraintBottom_toTopOf="@+id/diarrea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.978" />

    <Switch
        android:id="@+id/diarrea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diarrea"
        app:layout_constraintBottom_toTopOf="@+id/conjuntivitis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.982" />

    <Switch
        android:id="@+id/conjuntivitis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conjuntivitis"
        app:layout_constraintBottom_toTopOf="@+id/dolorCabeza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.979" />

    <Switch
        android:id="@+id/dolorCabeza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dolor_c"
        app:layout_constraintBottom_toTopOf="@+id/perdidaSentido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.985" />

    <Switch
        android:id="@+id/perdidaSentido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p_sentido"
        app:layout_constraintBottom_toTopOf="@+id/erupciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.984" />

    <Switch
        android:id="@+id/erupciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/erupciones"
        app:layout_constraintBottom_toTopOf="@+id/graves"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.966" />

    <TextView
        android:id="@+id/graves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/graves"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dificultadR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.984" />

    <Switch
        android:id="@+id/dificultadR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dificultad_r"
        app:layout_constraintBottom_toTopOf="@+id/dolorPecho"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.985" />

    <Switch
        android:id="@+id/dolorPecho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dolor_pecho"
        app:layout_constraintBottom_toTopOf="@+id/incapazHablar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.314"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.987" />

    <Switch
        android:id="@+id/incapazHablar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incapacidad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <Button
        android:id="@+id/saveTracing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Sesion"
        android:text="@string/btn_guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toEndOf="@+id/habituales"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />
</androidx.constraintlayout.widget.ConstraintLayout>